# competitive-intel-agents

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
config/: .env.example  agent_profiles.yaml  model.example.json
docs/: AGENT_COLLABORATION_CONTRACT.md  ARCHITECTURE_PRINCIPLES.md  SPEC_CODING_PLAN.md  V1_EXTENSION_PLAN.md  deploy.md  troubleshooting.md
docs/learn/: 00-project-positioning.md  01-project-skeleton.md  02-core-models.md  03-agent-interface.md  04-journal-store.md  05-artifact-store.md  06-tool-runtime.md  07-model-runtime.md  08-runtime-harness.md  09-collector-agent.md  10-analyst-agent.md  11-writer-agent.md  12-reviewer-agent.md  13-orchestrator.md  14-cli-entrypoint.md  15-rework-loop.md  16-terminal-dashboard.md  17-golden-replay.md  18-interactive-cli-session.md  19-dashboard-cli-command.md  20-persistent-local-workspace.md  21-real-web-collection-tools.md  22-provider-backed-model-runtime.md  23-structured-agent-prompts.md  24-full-provenance-graph.md  25-reliability-harness-v1.md  26-integrated-rework-orchestration.md  27-basic-web-dashboard.md  28-report-export-package.md  29-golden-suite-ci.md  30-demo-operator-polish.md  31-approved-with-caveats.md  32-model-retry.md  33-global-timeout.md  34-search-api-fallback.md  35-claim-source-cross-check.md  36-rate-limiting.md  37-structured-logging.md  38-rest-api.md  39-deployment.md
docs/modules/: 01-project-skeleton.md  02-core-models.md  13-rework-loop.md  (+48 more)
scripts/: debug_search.py  demo.sh  test_model.py
tests/: conftest.py
(+78 files in other folders)
