[project]
name = "competitive-intel-agents"
version = "0.1.0"
description = "Auditable competitive intelligence multi-agent collaboration system."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
competitive-intel = "competitive_intel_agents.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
